<resources>
    <string name="app_name">BioBazaar</string>
    <string name="promotions">PROMOÇÕES</string>
    <string name="favorites">FAVORITOS</string>
    <string name="noFavorites">Não tem favoritos de momento!</string>
    <string name="login">INICIAR SESSÃO</string>
    <string name="register">REGISTO</string>
    <string name="email">Email</string>
    <string name="name">Nome</string>
    <string name="surname">Apelido</string>
    <string name="password">Senha</string>
    <string name="confirmPassword">Confirmar Senha</string>
    <string name="or">-- OU --</string>
    <string name="loginPhrase">Ainda não tem conta?</string>
    <string name="loginLink">Registe-se aqui</string>
    <string name="registerPhrase">Já tem conta criada?</string>
    <string name="registerLink">Inicie Sessão</string>
    <string name="shopping">SACO DE COMPRAS</string>
    <string name="items">0 ITENS</string>
    <string name="orders">Encomendas</string>
    <string name="points">Pontos</string>
    <string name="details">Detalhes de Conta</string>
    <string name="out">Sair</string>
    <string name="info">Ver mais</string>
    <string name="infoPoints">Por cada compra efetuada superior a 50€ ganha imediatamente 2 pontos na sua conta.
        Quando chegar aos 5 pontos, ganha 10% de desconto para gastar nas suas próximas compras.</string>
    <string name="passwordDetails">Atualizar Palavra-Chave</string>
    <string name="company">Nome da Empresa</string>
    <string name="country">País/Região</string>
    <string name="adress">Morada</string>
    <string name="postal">Código Postal</string>
    <string name="locality">Localidade</string>
    <string name="district">Distrito</string>
    <string name="phone">Telemóvel</string>
    <string name="nif">NIF</string>
    <string name="payment">Método de Pagamento</string>
    <string name="cardName">Nome no Cartão</string>
    <string name="cardNumb">Número do Cartão</string>
    <string name="date">Validade</string>
    <string name="cvv">CVV</string>
    <string name="pay">Pagamento</string>
    <string name="payDetails">Detalhes de Faturação</string>
    <string name="paymentMethod">Escolha um método de pagamento</string>
    <string name="next">Continuar</string>
    <string name="save">Guardar</string>
    <string name="bill">Faturação</string>
    <string name="ctt">Entrega via CTT:</string>
    <string name="promotion">Promoções:</string>
    <string name="total">Total:</string>
    <string name="finish">Finalizar Compra</string>
    <string name="pointsQuestion">Deseja usar os pontos acumulados?</string>
    <string name="question">Tem a certeza que quer adicionar outro produto igual?</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="order">Ainda não fez nenhuma encomenda.</string>
    <string name="noShopping">O seu saco de compras está vazio!</string>
</resources>