<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFull"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.LoginFragment">


    //Tab

    <TextView
        android:id="@+id/novidades"
        android:layout_width="414dp"
        android:layout_height="44dp"
        android:layout_below="@+id/imageView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="0dp"
        android:foreground="@color/light" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/novidades"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="135dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="76dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/login"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold" />

    //Email label and textView

    <TextView
        android:id="@+id/txtViewName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/novidades"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="147dp"
        android:fontFamily="@font/rubik_light"
        android:text="@string/email" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:layout_below="@+id/txtViewName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:inputType="textEmailAddress" />

    //Password label and textView

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="247dp"
        android:fontFamily="@font/rubik_light"
        android:text="@string/password" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:inputType="textPassword" />

    //Login button

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="117dp"
        android:fontFamily="@font/rubik_medium"
        android:text="ENTRAR"
        android:textColor="@color/black" />

    // Or text

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_alignParentStart="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="14dp"
        android:text="@string/or" />

    //Google Button

    <FrameLayout
        android:id="@+id/LoginGoogle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    //Register Phrase

    <TextView
        android:id="@+id/txtOpenRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginStart="0dp"
        android:layout_marginTop="145dp"
        android:layout_toEndOf="@+id/textView7"
        android:text="@string/loginLink"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="145dp"
        android:text="@string/loginPhrase"
        android:textColor="@color/black" />

</RelativeLayout>