<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerFull"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.LoginFragment">

    //Logo
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="130dp"
        android:layout_height="67dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="98dp"
        app:srcCompat="@drawable/logotop" />

    //Tab
    <TextView
        android:id="@+id/novidades"
        android:layout_width="414dp"
        android:layout_height="44dp"
        android:layout_below="@+id/imageView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp"
        android:foreground="@color/light" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/novidades"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="169dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="42dp"
        android:text="@string/register"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold" />

    //Name label and textView

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/novidades"
        android:layout_alignParentStart="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="283dp"
        android:layout_height="35dp"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:inputType="textEmailAddress" />

    //Surname label and textView

    //Email label and textView

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/email" />

    //Password label and textView

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="283dp"
        android:layout_height="35dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:inputType="textEmailAddress" />

    //ConfirmPassword label and textView

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="283dp"
        android:layout_height="35dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmail"
        android:layout_alignParentStart="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/txtConfPassword"
        android:layout_width="283dp"
        android:layout_height="35dp"
        android:layout_below="@+id/textView14"
        android:layout_alignParentStart="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="Confirmar Senha" />

    // Register Button

    // Or text

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txtConfPassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/rubik_light"
        android:text="REGISTAR"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <!--<TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegister"
        android:layout_alignParentStart="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="11dp"
        android:text="@string/or" />-->

    //Login Phrase

    <TextView
        android:id="@+id/txtOpenLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegister"
        android:layout_marginStart="4dp"
        android:layout_marginTop="60dp"
        android:layout_toEndOf="@+id/textAccount"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/registerLink"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegister"
        android:layout_alignParentStart="true"
        android:layout_marginStart="96dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/rubik_light"
        android:text="@string/registerPhrase"
        android:textColor="@color/black" />

</RelativeLayout>