<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="415dp"
        android:layout_height="108dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="68dp"
        android:foreground="@color/white" />

    //Back button

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="99dp"
        android:background="@color/white"
        app:srcCompat="@drawable/ic_seta" />

    //Page lable

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="26dp"
        android:fontFamily="@font/rubik_light"
        android:text="@string/pay"
        android:textAllCaps="true"
        android:textColor="@color/green"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/payDetails"
        android:layout_width="296dp"
        android:layout_height="36dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="0dp"
        android:foreground="@color/light"/>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/payDetails"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:text="@string/payDetails"
        android:textAllCaps="true"
        android:textColor="@color/green"
        android:fontFamily="@font/rubik_light"
        android:textSize="18sp" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_below="@+id/payDetails"
        android:layout_marginTop="2dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1100dp"
            android:layout_below="@+id/bntdetails"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firstName"
                android:layout_alignParentStart="true"
                android:layout_marginStart="41dp"
                android:layout_marginTop="26dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:fontFamily="@font/rubik_light"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView12"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/rubik_light"
                android:ems="17"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:layout_below="@+id/textView4"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="40dp"
                android:ems="17"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:layout_below="@+id/email"
                android:layout_alignParentStart="true"
                android:layout_marginStart="41dp"
                android:layout_marginTop="26dp"
                android:text="@string/company"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/rubik_light"
                android:inputType="textPersonName"
                android:text="Name" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/companyName"
                android:layout_alignParentStart="true"
                android:layout_marginStart="41dp"
                android:layout_marginTop="19dp"
                android:fontFamily="@font/rubik_light"
                android:text="@string/country"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/rubik_light"
                android:layout_marginEnd="40dp"
                android:ems="17"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/country"
                android:layout_alignParentStart="true"
                android:layout_marginStart="41dp"
                android:layout_marginTop="19dp"
                android:fontFamily="@font/rubik_light"
                android:text="@string/adress"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/rubik_light"
                android:ems="17"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/adress"
                android:layout_alignParentStart="true"
                android:layout_marginStart="41dp"
                android:layout_marginTop="19dp"
                android:text="@string/postal"
                android:fontFamily="@font/rubik_light"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/postalCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/rubik_light"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="40dp"
                android:ems="17"
                android:inputType="textPostalAddress" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/postalCode"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/rubik_light"
                android:layout_marginStart="41dp"
                android:layout_marginTop="19dp"
                android:text="@string/locality"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/locality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:layout_below="@+id/textView8"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="40dp"
                android:ems="17"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:layout_height="wrap_content"
                android:layout_below="@+id/locality"
                android:layout_alignParentStart="true"
                android:layout_marginStart="41dp"
                android:layout_marginTop="19dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView10"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/rubik_light"
                android:layout_marginStart="40dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="40dp"
                android:ems="17"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone"
                android:layout_alignParentStart="true"
                android:layout_marginStart="41dp"
                android:layout_marginTop="19dp"
                android:fontFamily="@font/rubik_light"
                android:text="@string/nif"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView11"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/rubik_light"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="40dp"
                android:ems="17"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nif"
                android:layout_alignParentStart="true"
                android:layout_marginStart="41dp"
                android:fontFamily="@font/rubik_light"
                android:layout_marginTop="28dp"
                android:text="@string/paymentMethod"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <ImageButton
                android:id="@+id/btnMultibanco"
                android:layout_width="124dp"
                android:layout_height="120dp"
                android:layout_below="@+id/textView13"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="60dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/ic_multibanco2" />

            <ImageButton
                android:id="@+id/btnTransfer"
                android:layout_width="124dp"
                android:layout_height="120dp"
                android:layout_below="@+id/textView13"
                android:layout_marginStart="60dp"
                android:layout_marginTop="22dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/ic_transferencia2"/>

            <ImageButton
                android:id="@+id/btnWay"
                android:layout_width="124dp"
                android:layout_height="120dp"
                android:layout_below="@+id/btnMultibanco"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="60dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/ic_mbway2" />

            <ImageButton
                android:id="@+id/btnMaster"
                android:layout_width="124dp"
                android:layout_height="120dp"
                android:layout_below="@+id/btnTransfer"
                android:layout_alignParentStart="true"
                android:layout_marginStart="60dp"
                android:layout_marginTop="38dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/ic_mastercard2" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnResume"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="@font/rubik_light"
        android:text="@string/next"
        android:textAlignment="textStart"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/arrowRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnResume"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-35dp"
        android:layout_marginEnd="25dp"
        android:elevation="2dp"
        app:srcCompat="@drawable/ic_arrowright" />
</RelativeLayout>